bugfix overflow

--- a/css/src/new-elements/_iphoneX.scss
+++ b/css/src/new-elements/_iphoneX.scss
@@ -7,6 +7,7 @@
 	margin:0 auto;
 	padding: 15px 17px 15px;
 	font-size: 1.2em;
+	border-radius: 10%;
 }
 [data-frame='iphone-x']:after{
 	content: "";
@@ -30,23 +31,37 @@
 // splash Page design simulate
 [data-frame='iphone-x'][data-activity='splash']{
 	text-align: center;
+	background: linear-gradient(90deg, attr(data-bg-from), attr(data-bg-to));
 }
 [data-frame='iphone-x'][data-activity='splash'] img{
-	width: 70%;
-	margin-top: 40%;
+	width: 50%;
+	margin-top: 50%;
 	margin-bottom: 10px;
 }
 [data-frame='iphone-x'][data-activity='splash'] h1{
 	font-weight: 900;
+	font-size: 3rem;
+	height: 40px;
+	line-height: 40px;
+	overflow: hidden;
+	padding: 0 10px;
 }
 [data-frame='iphone-x'][data-activity='splash'] h2{
 	font-weight: 100;
+	font-size: 2rem;
+	height: 30px;
+	line-height: 30px;
+	overflow: hidden;
+	padding: 0 10px;
 }
 [data-frame='iphone-x'][data-activity='splash'] .desc{
 	position: absolute;
 	bottom: 30px;
 	right: 20px;
 	left: 20px;
+	max-height: 100px;
+	line-height: 15px;
+	overflow: hidden;
 }
 [data-frame='iphone-x'][data-activity='splash'][data-color='red']{
 
